# python-sqs-consumer

./: .bumpversion.cfg  .cookiecutterrc  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  appveyor.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
ci/templates/: .travis.yml  appveyor.yml  tox.ini
docs/: conf.py  installation.rst  usage.rst
docs/reference/: index.rst  python_sqs_consumer.rst
src/python_sqs_consumer/: __main__.py  cli.py  processor.py  sqs_consumer_pool.py
tests/: test_processor.py  test_python_sqs_consumer.py  test_sqs_consumer_pool.py
