[tool]
[tool.poetry]
name = "python_sqs_consumer"
version = "0.0.4"
description = "An example package. Replace this with a proper project description. Generated with https://github.com/ionelmc/cookiecutter-pylibrary"
license = "BSD"
classifiers = ["Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "License :: OSI Approved :: BSD License", "Operating System :: Unix", "Operating System :: POSIX", "Operating System :: Microsoft :: Windows", "Programming Language :: Python", "Programming Language :: Python :: 2.6", "Programming Language :: Python :: 2.7", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.3", "Programming Language :: Python :: 3.4", "Programming Language :: Python :: Implementation :: CPython", "Programming Language :: Python :: Implementation :: PyPy", "Topic :: Utilities"]
homepage = "https://github.com/admetricks/python-sqs-consumer"
authors = ["Juan Pizarro <jpizarrom@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.6.9"
boto3 = ">=1.2.2"
